# problem-generator

./: .gitignore  CMakeLists.txt  Cargo.toml  DEV_README.md  LICENSE  README.md  build.rs  problem_generator.h  simple_client.c  simple_client.cpp
.github/workflows/: ci.yml
data/: deceptive_trap_configuration.txt
data/codomain_files/: deceptive-trap_10_5_1_2_0.txt
data/small_example/problems/: deceptive-trap_10_5_1_2_0.txt
data/tiny_test/problem_generation/: deceptive_trap.txt
docs/: _config.yml  file_structures.md  index.md  installation.md  subcommands.md
src/: lib.rs  problem.rs
src/problem/: c_interface.rs  clique_tree.rs  codomain.rs  codomain_subclasses.rs  configuration.rs  io.rs  problem.rs  problem_generation.rs
tests/: integration_test.rs
