[package]
name = "problem_generator"
version = "0.3.0"
authors = ["Tobias van Driessel <tobiasvandriessel@startmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "TD Mk Landscape benchmark generator, for use with black-box optimization algorithms."
homepage = "https://github.com/tobiasvandriessel/problem_generator"
#documentation = ""
repository = "https://github.com/tobiasvandriessel/problem_generator"
readme = "README.md"
keywords = ["problem", "generator", "benchmark", "landscape", "black-box" ]
#categories = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
log = "0.4.11"
env_logger = "0.8.2"
structopt = "0.3.21"
structopt-derive = "0.4.14"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}
#statrs = "0.13.0"
#libc = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
itertools = "0.10.0"

[build-dependencies]
cbindgen = "0.19.0"

[lib]
crate-type = ["cdylib"]
